@@ -30,6 +30,7 @@ This release contains contributions from (alphabetically by first name):
    in a Wayland session. (thanks Hector)
  - *keyboard* module now writes X11 layout configuration with variants
    for all non-ASCII (e.g. us) layouts. (thanks Ivan)
+ - *keyboard* module now can configure keyboard switch. (thanks Ivan)
 
 
 # 3.3.0-alpha3 (2023-08-28)
